--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=ludo
+
+#Connexion à la base de données
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databasename=LUDOTHEQUE;integratedSecurity=false;encrypt=false;trustServerCertificate=false
+spring.datasource.username=sa
+spring.datasource.password=Pa$$w0rd
+
+#Détail des requêtes pour le développement
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
